    and cases where no :TEST is given but the compiler can infer that
    the element to search is of type (OR FIXNUM (NOT NUMBER)).
  * optimization: better LOGNOT on fixnums.
  * optimization: modular arithmetic for a particular requested width
    is implemented using a tagged representation unless a better 
    representation is available.
  * bug fix: SB-BSD-SOCKETS:MAKE-INET-ADDRESS checks the input string
    for wellformedness and returns a specialized vector. (reported by
    Francois-Rene Rideau)
  * bug fix: FIND-CLASS was not thread-safe. (reported by Attila Lendvai)
  * bug fix: ~R was broken for vigtillions. (thanks to Luis Oliveira)
  * bug fix: attempt to obtain *SCHEDULER-LOCK* recursively when
    unscheduling timer at the same time as another timer fires.
  * bug fix: don't reschedule timers for dead threads.
  * bug fix: periodic polling was broken. (thanks to Espen S Johnsen)
  * bug fix: copying output from RUN-PROGRAM to a stream signalled
    bogus errors if select() was interrupted.
  * enhancement: add support for fcntl's struct flock to SB-POSIX.

changes in sbcl-1.0.15 relative to sbcl-1.0.14:
  * enhancement: cleaner backtraces for interactive interrupts, as
    well as other cases where the interesting frames used to be
    obscured by interrupt handling frames.
  * enhancement: untracing a whole package using (UNTRACE "FOO") is
    now supported, and tracing a whole package using (TRACE "FOO") now
    traces SETF-functions as well.
  * enhancement: implement SB-POSIX:MKTEMP and SB-POSIX:MKDTEMP.
  * SB-DEBUG:PRINT-FRAME-CALL now prints the entry-point kind even
    when SB-DEBUG:*SHOW-ENTRY-POINT-DETAILS* is NIL.
  * unreadably printed representation of hash-tables now includes
    weakness if any.
  * bug fix: partially fixed #188: type propagation from assignments
    is now more efficient.
  * bug fix: fixed #407: (COERCE X 'SINGLE-FLOAT) and (COERCE X
    'DOUBLE-FLOAT) are not flushable.